# aa-s5-bmstu

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  test_measure_stack.c
gost/: README.md  example.bib
lab_01/: CMakeLists.txt  algorithm.cpp  algorithm.h  benchmark.cpp  benchmark.h  colors.h  errors.cpp  func.cpp  func.h  globals.cpp  globals.h  main.cpp  menu.cpp  menu.h  plot.py  test.cpp  test.h
lab_01/benchmark/: data.csv  data_10k.csv  data_123.csv  data_1_1000.csv
lab_01/docs/: Makefile  main.tex  preambule.tex  title.tex
lab_01/old/: algorithm.cpp  errors.h  main.cpp  menu.cpp  menu.h  typedefs.h
lab_01/report/: Makefile  bibliography.bib  main.tex  preamble.tex  test-tikz-flowchart.tex  title.tex  utf8gost705u.bst
lab_01/report/diag/: dlev_ifm.drawio  dlev_rec.drawio  dlev_rwc.drawio  dlrwch.drawio  eskd_flowchart_drawio_blocks.xml  lev_ifm.drawio
lab_01/report/lst/: benchmarkdata.cpp  create_matrix.cpp  damlev_ifm.cpp  damlev_ifm_helper.cpp  damlev_rec.cpp  damlev_rwc.cpp  damlev_rwc_helper.cpp  free_matrix.cpp  l1.cpp  l2.cpp  l3.cpp  lev_ifm.cpp  lev_ifm_helper.cpp  lev_im.cpp  lev_im_helper.cpp  matrix_roll_one_down.cpp  matrix_roll_one_up.cpp  min3.cpp  min4.cpp
lab_01/report/report/: 00-introduction.tex  01-analytical.tex  02-design.tex  03-technological.tex  04-research.tex  05-conclusion.tex  06-bibliography.tex  appendix-a.tex  appendix-b.tex
lab_02/report/: main.tex  title.tex
lab_02/report/report/: 05-conclusion.tex  06-bibliography.tex  appendix-a.tex
lab_03/: CMakeLists.txt  dbg.cpp  dbg.h  main.cpp  sort.h  sort_bitonic.cpp  sort_bitonic.h  sort_bubble.cpp  sort_bubble.h  sort_radix.cpp  sort_radix.h  sorting_utils.h
lab_03/report/: bibliography.bib  title.tex
lab_03/report/report/: 01-analytical.tex  02-design.tex  04-research.tex  06-bibliography.tex
lab_04/: CMakeLists.txt  file.txt  gentext.py  main.cpp  utils.cpp  utils.h  words.txt
lab_04/report/: Makefile
lab_04/report/report/: 03-technological.tex
mwe-report/: Makefile  main.tex  modified-utf8gost705u.bst  preamble.tex  title.tex
mwe-report/report/: 00-introduction.tex  03-technological.tex  04-research.tex  05-conclusion.tex  06-bibliography.tex
